# django_project

./: .env.sample  data_category.json  data_product.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_create_date.py  0003_alter_blog_create_date.py  0004_alter_blog_create_date.py  0005_alter_blog_create_date.py  0006_alter_blog_create_date.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: func.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_product_updated_at.py  0005_alter_product_updated_at.py  0006_alter_product_created_at.py  0007_version.py  0008_alter_version_product.py  0009_product_created_user.py  0010_alter_version_product.py  0011_product_is_published.py  0012_alter_product_options.py  0013_alter_product_options.py  0014_alter_product_options.py
catalog/templates/: add_prod.html  base.html  contacts.html  home.html  product.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/include/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
user/: forms.py  models.py  urls.py  views.py
user/fuctions/: random_password.py
user/migrations/: 0001_initial.py  0002_user_token.py
(+11 files in other folders)
