[tool.poetry]
name = "homework19-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
black = "^24.4.2"
ipython = "^8.24.0"
django-dump-load-utf8 = "^0.0.4"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
